Completed avatar/channel doc
Harmonisation WIP
Doc completion avatar/channel
