# api/channel_route.go
@@ -12,29 +12,138 @@ import (
 	renderPackage "github.com/unrolled/render"
 )
 
+const (
+	channelNameKey key = "channelName"
+	channelTypeKey key = "channelType"
+	oldChannelKey  key = "oldChannel"
+)
+
 func initChannelRoute(router chi.Router) {
 	router.Route("/channel", func(r chi.Router) {
+		// swagger:route GET /channel Channels getAllChannel
+		//
+		// Get channels
+		//
+		// This will get all the channels available in the organisation.
+		//
+		// 	Responses:
+		//    200: channelArraySuccess
+		// 	  503: databaseError
+		// 	  default: genericError
 		r.Get("/", getAllChannel)
+		// swagger:route POST /channel Channels newChannel
+		//
+		// New channel
+		//
+		// This will create an channel for organisation channels library.
+		//
+		// 	Responses:
+		//    200: channelObjectSuccess
+		// 	  422: wrongEntity
+		// 	  503: databaseError
+		// 	  default: genericError
 		r.Post("/", newChannel)
+		// swagger:route GET /channel/all Channels getAllChannel
+		//
+		// Get channels
+		//
+		// This will get all the channels available in the organisation.
+		//
+		// 	Responses:
+		//    200: channelArraySuccess
+		// 	  503: databaseError
+		// 	  default: genericError
 		r.Get("/all", getAllChannel)
+		// swagger:route POST /channel/new Channels newChannel
+		//
+		// New channel
+		//
+		// This will create an channel for organisation channels library.
+		//
+		// 	Responses:
+		//    200: channelObjectSuccess
+		// 	  422: wrongEntity
+		// 	  503: databaseError
+		// 	  default: genericError
 		r.Post("/new", newChannel)
+		// swagger:route GET /channel/public Channels getPublicChannel
+		//
+		// Get public channels
+		//
+		// This will get all the public channels available in the organisation.
+		//
+		// 	Responses:
+		//    200: channelArraySuccess
+		// 	  503: databaseError
+		// 	  default: genericError
 		r.Get("/public", getPublicChannel)
+		// swagger:route GET /channel/private Channels getPrivateChannel
+		//
+		// Get private channels
+		//
+		// This will get all the private channels available in the organisation.
+		//
+		// 	Responses:
+		//    200: channelArraySuccess
+		// 	  503: databaseError
+		// 	  default: genericError
 		r.Get("/private", getPrivateChannel)
 		r.Route("/type/", func(r chi.Router) {
 			r.Route("/:channelType", func(r chi.Router) {
 				r.Use(channelContext)
+				// swagger:route GET /channel/type/:channelType Channels getChannelFromType
+				//
+				// Get channels of provided type
+				//
+				// This will get all the channels of provided type available in the organisation.
+				//
+				// 	Responses:
+				//    200: channelArraySuccess
+				// 	  503: databaseError
+				// 	  default: genericError
 				r.Get("/", getChannelFromType)
 			})
 		})
 		r.Route("/name/", func(r chi.Router) {
 			r.Route("/:channelName", func(r chi.Router) {
 				r.Use(channelContext)
+				// swagger:route GET /channel/name/:channelName Channels getChannelFromName
+				//
+				// Get nammed channel
+				//
+				// This will get the channels having provided name in the organisation.
+				//
+				// 	Responses:
+				//    200: channelObjectSuccess
+				// 	  503: databaseError
+				// 	  default: genericError
 				r.Get("/", getChannelFromName)
 			})
 		})
 		r.Route("/:channelID", func(r chi.Router) {
 			r.Use(channelContext)
+			// swagger:route PUT /channel/:channelID Channels updateChannel
+			//
+			// Update channel
+			//
+			// This will return the new channel object
+			//
+			// 	Responses:
+			//    200: channelObjectSuccess
+			// 	  422: wrongEntity
+			// 	  503: databaseError
+			// 	  default: genericError
 			r.Put("/update", updateChannel)
+			// swagger:route DELETE /channel/:channelID Channels deleteChannel
+			//
+			// Delete channel
+			//
+			// This will return an object describing the deletion
+			//
+			// 	Responses:
+			//    200: deleteMessage
+			// 	  503: databaseError
+			// 	  default: genericError
 			r.Delete("/delete", deleteChannel)
 		})
 	})
@@ -45,15 +154,13 @@ func channelContext(next http.Handler) http.Handler {
 		channelID, err := strconv.ParseUint(chi.URLParam(r, "channelID"), 10, 64)
 		name := chi.URLParam(r, "channelName")
 		channelType := chi.URLParam(r, "channelType")
-		shortcut := chi.URLParam(r, "channelShortcut")
 		oldChannel := models.Channel{}
-		ctx := context.WithValue(r.Context(), "channelName", name)
-		ctx = context.WithValue(ctx, "channelType", channelType)
-		ctx = context.WithValue(ctx, "channelShortcut", shortcut)
+		ctx := context.WithValue(r.Context(), channelNameKey, name)
+		ctx = context.WithValue(ctx, channelTypeKey, channelType)
 		if err == nil {
 			oldChannel = datastores.Store().Channel().GetByID(channelID, dbStore.db)
 		}
-		ctx = context.WithValue(ctx, "oldChannel", oldChannel)
+		ctx = context.WithValue(ctx, oldChannelKey, oldChannel)
 		next.ServeHTTP(w, r.WithContext(ctx))
 	})
 }
@@ -66,7 +173,7 @@ func getAllChannel(w http.ResponseWriter, r *http.Request) {
 		result := store.Channel().GetAll(db)
 		render.JSON(w, 200, result)
 	} else {
-		render.JSON(w, 500, "Connection failure : DATABASE")
+		render.JSON(w, error503.StatusCode, error503)
 	}
 }
 
@@ -78,7 +185,7 @@ func getPublicChannel(w http.ResponseWriter, r *http.Request) {
 		result := store.Channel().GetPublic(db)
 		render.JSON(w, 200, result)
 	} else {
-		render.JSON(w, 500, "Connection failure : DATABASE")
+		render.JSON(w, error503.StatusCode, error503)
 	}
 }
 
@@ -90,7 +197,7 @@ func getPrivateChannel(w http.ResponseWriter, r *http.Request) {
 		result := store.Channel().GetPrivate(db)
 		render.JSON(w, 200, result)
 	} else {
-		render.JSON(w, 500, "Connection failure : DATABASE")
+		render.JSON(w, error503.StatusCode, error503)
 	}
 }
 
@@ -98,7 +205,7 @@ func getChannelFromName(w http.ResponseWriter, r *http.Request) {
 	store := datastores.Store()
 	render := renderPackage.New()
 	db := dbStore.db
-	name := r.Context().Value("channelName").(string)
+	name := r.Context().Value(channelNameKey).(string)
 	channel := store.Channel().GetByName(name, db)
 	render.JSON(w, 200, channel)
 }
@@ -107,7 +214,7 @@ func getChannelFromType(w http.ResponseWriter, r *http.Request) {
 	store := datastores.Store()
 	render := renderPackage.New()
 	db := dbStore.db
-	channelType := r.Context().Value("channelType").(string)
+	channelType := r.Context().Value(channelTypeKey).(string)
 	channel := store.Channel().GetByType(channelType, db)
 	render.JSON(w, 200, channel)
 }
@@ -123,7 +230,7 @@ func newChannel(w http.ResponseWriter, r *http.Request) {
 	request := r.Body
 	err := chiRender.Bind(request, &data)
 	if err != nil {
-		render.JSON(w, 500, "Internal server error")
+		render.JSON(w, error422.StatusCode, error422)
 	} else {
 		if err := db.DB().Ping(); err == nil {
 			err := store.Channel().Save(data.Channel, db)
@@ -133,7 +240,7 @@ func newChannel(w http.ResponseWriter, r *http.Request) {
 				render.JSON(w, err.StatusCode, err)
 			}
 		} else {
-			render.JSON(w, 500, "Connection failure : DATABASE")
+			render.JSON(w, error503.StatusCode, error503)
 		}
 	}
 }
@@ -148,9 +255,9 @@ func updateChannel(w http.ResponseWriter, r *http.Request) {
 	db := dbStore.db
 	request := r.Body
 	err := chiRender.Bind(request, &data)
-	channel := r.Context().Value("oldChannel").(models.Channel)
+	channel := r.Context().Value(oldChannelKey).(models.Channel)
 	if err != nil {
-		render.JSON(w, 500, "Internal server error")
+		render.JSON(w, error422.StatusCode, error422)
 	} else {
 		if err := db.DB().Ping(); err == nil {
 			err := store.Channel().Update(&channel, data.Channel, db)
@@ -160,13 +267,13 @@ func updateChannel(w http.ResponseWriter, r *http.Request) {
 				render.JSON(w, err.StatusCode, err)
 			}
 		} else {
-			render.JSON(w, 500, "Connection failure : DATABASE")
+			render.JSON(w, error503.StatusCode, error503)
 		}
 	}
 }
 
 func deleteChannel(w http.ResponseWriter, r *http.Request) {
-	channel := r.Context().Value("channel").(models.Channel)
+	channel := r.Context().Value(oldChannelKey).(models.Channel)
 	store := datastores.Store()
 	render := renderPackage.New()
 	message := deleteMessageModel{
@@ -185,6 +292,6 @@ func deleteChannel(w http.ResponseWriter, r *http.Request) {
 			render.JSON(w, err.StatusCode, message.Message)
 		}
 	} else {
-		render.JSON(w, 503, error503)
+		render.JSON(w, error503.StatusCode, error503)
 	}
 }
