# swagger.yaml
@@ -82,6 +82,75 @@ paths:
           description: "genericError general error when unexpected errors occured"
           schema:
             $ref: "#/definitions/genericErrorModel"
+  /avatar/:avatarID:
+    put:
+      tags:
+      - "Avatars"
+      summary: "Update avatar"
+      description: "This will return the new avatar object"
+      operationId: "updateAvatar"
+      parameters:
+      - name: "avatarID"
+        in: "path"
+        description: "Link of the avatar in server."
+        required: true
+        type: "integer"
+        format: "int64"
+        x-go-name: "AvatarID"
+      - in: "body"
+        name: "avatar"
+        description: "Link of the avatar in server."
+        required: false
+        schema:
+          $ref: "#/definitions/Avatar"
+        x-go-name: "Avatar"
+      responses:
+        200:
+          description: "avatarObjectSuccess list of avatars"
+          schema:
+            $ref: "#/definitions/Avatar"
+        422:
+          description: "wrongEntityError is an error object to inform that the provided\
+            \ object was not correctly formated"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        503:
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        default:
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+    delete:
+      tags:
+      - "Avatars"
+      summary: "Delete avatar"
+      description: "This will return an object describing the deletion"
+      operationId: "deleteAvatar"
+      parameters:
+      - name: "avatarID"
+        in: "path"
+        description: "Link of the avatar in server."
+        required: true
+        type: "integer"
+        format: "int64"
+        x-go-name: "AvatarID"
+      responses:
+        200:
+          description: "deleteMessage"
+          schema:
+            $ref: "#/definitions/deleteMessage"
+        503:
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        default:
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
   /avatar/all:
     get:
       tags:
@@ -134,6 +203,34 @@ paths:
           description: "genericError general error when unexpected errors occured"
           schema:
             $ref: "#/definitions/genericErrorModel"
+  /avatar/name/:avatarName:
+    get:
+      tags:
+      - "Avatars"
+      summary: "y\nGet avatar from name"
+      description: "This will return the avatar object corresponding to provided name"
+      operationId: "getAvatarFromName"
+      parameters:
+      - name: "avatarName"
+        in: "path"
+        description: "Link of the avatar in server."
+        required: true
+        type: "string"
+        x-go-name: "AvatarName"
+      responses:
+        200:
+          description: "avatarObjectSuccess list of avatars"
+          schema:
+            $ref: "#/definitions/Avatar"
+        503:
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        default:
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
   /avatar/new:
     post:
       tags:
@@ -154,6 +251,297 @@ paths:
           description: "avatarObjectSuccess list of avatars"
           schema:
             $ref: "#/definitions/Avatar"
+        503:
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        default:
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+  /channel:
+    get:
+      tags:
+      - "Channels"
+      summary: "Get channels"
+      description: "This will get all the channels available in the organisation."
+      operationId: "getAllChannel"
+      parameters: []
+      responses:
+        200:
+          description: "channelSlice Array of channels"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Channel"
+        503:
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        default:
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+    post:
+      tags:
+      - "Channels"
+      summary: "New channel"
+      description: "This will create an channel for organisation channels library."
+      operationId: "newChannel"
+      parameters:
+      - in: "body"
+        name: "channel"
+        description: "Link of the channel in server."
+        required: false
+        schema:
+          $ref: "#/definitions/Channel"
+        x-go-name: "Channel"
+      responses:
+        200:
+          description: "channelObjectSuccess list of channels"
+          schema:
+            $ref: "#/definitions/Channel"
+        422:
+          description: "wrongEntityError is an error object to inform that the provided\
+            \ object was not correctly formated"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        503:
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        default:
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+  /channel/:channelID:
+    put:
+      tags:
+      - "Channels"
+      summary: "Update channel"
+      description: "This will return the new channel object"
+      operationId: "updateChannel"
+      parameters:
+      - name: "channelID"
+        in: "path"
+        description: "Link of the channel in server."
+        required: true
+        type: "integer"
+        format: "int64"
+        x-go-name: "ChannelID"
+      - in: "body"
+        name: "channel"
+        description: "Link of the channel in server."
+        required: false
+        schema:
+          $ref: "#/definitions/Channel"
+        x-go-name: "Channel"
+      responses:
+        200:
+          description: "channelObjectSuccess list of channels"
+          schema:
+            $ref: "#/definitions/Channel"
+        422:
+          description: "wrongEntityError is an error object to inform that the provided\
+            \ object was not correctly formated"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        503:
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        default:
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+    delete:
+      tags:
+      - "Channels"
+      summary: "Delete channel"
+      description: "This will return an object describing the deletion"
+      operationId: "deleteChannel"
+      parameters:
+      - name: "channelID"
+        in: "path"
+        description: "Link of the channel in server."
+        required: true
+        type: "integer"
+        format: "int64"
+        x-go-name: "ChannelID"
+      responses:
+        200:
+          description: "deleteMessage"
+          schema:
+            $ref: "#/definitions/deleteMessage"
+        503:
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        default:
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+  /channel/all:
+    get:
+      tags:
+      - "Channels"
+      summary: "Get channels"
+      description: "This will get all the channels available in the organisation."
+      operationId: "getAllChannel"
+      parameters: []
+      responses:
+        200:
+          description: "channelSlice Array of channels"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Channel"
+        503:
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        default:
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+  /channel/name/:channelName:
+    get:
+      tags:
+      - "Channels"
+      summary: "Get nammed channel"
+      description: "This will get the channels having provided name in the organisation."
+      operationId: "getChannelFromName"
+      parameters:
+      - name: "channelName"
+        in: "path"
+        description: "Link of the channel in server."
+        required: true
+        type: "string"
+        x-go-name: "ChannelName"
+      responses:
+        200:
+          description: "channelObjectSuccess list of channels"
+          schema:
+            $ref: "#/definitions/Channel"
+        503:
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        default:
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+  /channel/new:
+    post:
+      tags:
+      - "Channels"
+      summary: "New channel"
+      description: "This will create an channel for organisation channels library."
+      operationId: "newChannel"
+      parameters:
+      - in: "body"
+        name: "channel"
+        description: "Link of the channel in server."
+        required: false
+        schema:
+          $ref: "#/definitions/Channel"
+        x-go-name: "Channel"
+      responses:
+        200:
+          description: "channelObjectSuccess list of channels"
+          schema:
+            $ref: "#/definitions/Channel"
+        422:
+          description: "wrongEntityError is an error object to inform that the provided\
+            \ object was not correctly formated"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        503:
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        default:
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+  /channel/private:
+    get:
+      tags:
+      - "Channels"
+      summary: "Get private channels"
+      description: "This will get all the private channels available in the organisation."
+      operationId: "getPrivateChannel"
+      parameters: []
+      responses:
+        200:
+          description: "channelSlice Array of channels"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Channel"
+        503:
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        default:
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+  /channel/public:
+    get:
+      tags:
+      - "Channels"
+      summary: "Get public channels"
+      description: "This will get all the public channels available in the organisation."
+      operationId: "getPublicChannel"
+      parameters: []
+      responses:
+        200:
+          description: "channelSlice Array of channels"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Channel"
+        503:
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        default:
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+  /channel/type/:channelType:
+    get:
+      tags:
+      - "Channels"
+      summary: "Get channels of provided type"
+      description: "This will get all the channels of provided type available in the\
+        \ organisation."
+      operationId: "getChannelFromType"
+      parameters:
+      - name: "channelType"
+        in: "path"
+        description: "Link of the channel in server."
+        required: true
+        type: "string"
+        x-go-name: "ChannelType"
+      responses:
+        200:
+          description: "channelSlice Array of channels"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Channel"
         503:
           description: "databaseError is an error object to tell what is happening\
             \ when we encounter issue with database"
@@ -593,6 +981,42 @@ definitions:
       \ Each user is unique inside a given organisation, but users are not shared\
       \ between\norganisations. Required apply only for creation of the object."
     x-go-package: "github.com/titouanfreville/popcubeapi/models"
+  avatarArraySuccess:
+    type: "object"
+    properties:
+      Avatars:
+        type: "array"
+        description: "in:body"
+        items:
+          $ref: "#/definitions/Avatar"
+    description: "avatarSlice Array of avatars"
+    x-go-package: "github.com/titouanfreville/popcubeapi/api"
+  avatarObjectSuccess:
+    type: "object"
+    properties:
+      avatar:
+        description: "in:body\nList of avatars returned"
+        $ref: "#/definitions/Avatar"
+    description: "avatarObjectSuccess list of avatars"
+    x-go-package: "github.com/titouanfreville/popcubeapi/api"
+  channelArraySuccess:
+    type: "object"
+    properties:
+      Channels:
+        type: "array"
+        description: "in:body"
+        items:
+          $ref: "#/definitions/Channel"
+    description: "channelSlice Array of channels"
+    x-go-package: "github.com/titouanfreville/popcubeapi/api"
+  channelObjectSuccess:
+    type: "object"
+    properties:
+      channel:
+        description: "in:body\nList of channels returned"
+        $ref: "#/definitions/Channel"
+    description: "channelObjectSuccess list of channels"
+    x-go-package: "github.com/titouanfreville/popcubeapi/api"
   databaseError:
     type: "object"
     properties:
@@ -700,6 +1124,16 @@ responses:
     description: "avatarObjectSuccess list of avatars"
     schema:
       $ref: "#/definitions/Avatar"
+  channelArraySuccess:
+    description: "channelSlice Array of channels"
+    schema:
+      type: "array"
+      items:
+        $ref: "#/definitions/Channel"
+  channelObjectSuccess:
+    description: "channelObjectSuccess list of channels"
+    schema:
+      $ref: "#/definitions/Channel"
   databaseError:
     description: "databaseError is an error object to tell what is happening when\
       \ we encounter issue with database"
